// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EscrowedPaymentReminderSummaryNotification renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "elevation": 12,
        "padding": 16,
        "shadowColor": "black",
        "shadowOffset": Object {
          "height": 6,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 9.600000000000001,
      },
      Object {
        "borderRadius": 8,
      },
      Array [
        Object {
          "height": 144,
        },
        Object {},
      ],
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "width": 40,
        }
      }
    >
      <Image
        resizeMode="contain"
        source={
          Object {
            "testUri": "../../../packages/mobile/src/images/Invite-Friends.png",
          }
        }
        style={
          Object {
            "height": 30,
            "width": 30,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "space-between",
          "marginLeft": 16,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#2E3338",
            "fontFamily": "Inter-Medium",
            "fontSize": 16,
            "lineHeight": 22,
            "marginBottom": 4,
          }
        }
        testID="undefined/Title"
      >
        escrowedPaymentReminderSummaryTitle
      </Text>
      <Text
        numberOfLines={3}
        style={
          Object {
            "color": "#81868B",
            "flex": 1,
            "fontFamily": "Inter-Regular",
            "fontSize": 14,
            "lineHeight": 18,
          }
        }
        testID="undefined/Details"
      />
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
        testID="undefined/CallToActions"
      >
        <View
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackgroundBorderless",
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          testID="undefined/CallToActions/viewAll/Button"
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#1AB775",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 16,
                  "lineHeight": 22,
                },
                Object {
                  "fontSize": 14,
                  "lineHeight": 16,
                  "marginRight": 24,
                },
              ]
            }
          >
            viewAll
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`EscrowedPaymentReminderSummaryNotification when more 1 requests renders just it alone 1`] = `
<View>
  <View
    style={
      Object {
        "marginBottom": 16,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#FFFFFF",
            "elevation": 12,
            "padding": 16,
            "shadowColor": "black",
            "shadowOffset": Object {
              "height": 6,
              "width": 0,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 9.600000000000001,
          },
          Object {
            "borderRadius": 8,
          },
          Array [
            Object {
              "height": 144,
            },
            Object {},
          ],
        ]
      }
      testID="EscrowedPaymentListItem"
    >
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "marginRight": 16,
            }
          }
        >
          <Text
            numberOfLines={2}
            style={
              Object {
                "color": "#9CA4A9",
                "fontFamily": "Inter-Regular",
                "fontSize": 13,
                "lineHeight": 16,
                "marginBottom": 4,
              }
            }
            testID="EscrowedPaymentListItem/Title"
          >
            escrowPaymentNotificationTitle
          </Text>
          <Text
            numberOfLines={1}
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-SemiBold",
                "fontSize": 24,
                "lineHeight": 28,
                "marginBottom": 2,
              }
            }
            testID="EscrowedPaymentListItem/Amount"
          >
            <Text
              numberOfLines={1}
              style={
                Array [
                  undefined,
                  Object {
                    "color": undefined,
                  },
                ]
              }
            >
              
              $
              9.31
            </Text>
          </Text>
          <Text
            style={
              Object {
                "color": "#2E3338",
                "fontFamily": "Inter-Regular",
                "fontSize": 14,
                "lineHeight": 18,
              }
            }
            testID="EscrowedPaymentListItem/Details"
          >
            test message
          </Text>
        </View>
        <View
          style={Object {}}
        >
          <Image
            resizeMode="contain"
            source={
              Object {
                "testUri": "../../../packages/mobile/src/images/Invite-Friends.png",
              }
            }
            style={
              Object {
                "height": 30,
                "width": 30,
              }
            }
          />
        </View>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
        testID="EscrowedPaymentListItem/CallToActions"
      >
        <View
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackgroundBorderless",
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          testID="EscrowedPaymentListItem/CallToActions/global:remind/Button"
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#1AB775",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 16,
                  "lineHeight": 22,
                },
                Object {
                  "fontSize": 14,
                  "lineHeight": 16,
                  "marginRight": 24,
                },
              ]
            }
          >
            global:remind
          </Text>
        </View>
        <View
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackgroundBorderless",
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          testID="EscrowedPaymentListItem/CallToActions/global:reclaim/Button"
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#1AB775",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 16,
                  "lineHeight": 22,
                },
                Object {
                  "fontSize": 14,
                  "lineHeight": 16,
                  "marginRight": 24,
                },
              ]
            }
          >
            global:reclaim
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`EscrowedPaymentReminderSummaryNotification when more than 2 requests renders just two 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "elevation": 12,
        "padding": 16,
        "shadowColor": "black",
        "shadowOffset": Object {
          "height": 6,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 9.600000000000001,
      },
      Object {
        "borderRadius": 8,
      },
      Array [
        Object {
          "height": 144,
        },
        Object {},
      ],
    ]
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "width": 40,
        }
      }
    >
      <Image
        resizeMode="contain"
        source={
          Object {
            "testUri": "../../../packages/mobile/src/images/Invite-Friends.png",
          }
        }
        style={
          Object {
            "height": 30,
            "width": 30,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "justifyContent": "space-between",
          "marginLeft": 16,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#2E3338",
            "fontFamily": "Inter-Medium",
            "fontSize": 16,
            "lineHeight": 22,
            "marginBottom": 4,
          }
        }
        testID="undefined/Title"
      >
        escrowedPaymentReminderSummaryTitle
      </Text>
      <Text
        numberOfLines={3}
        style={
          Object {
            "color": "#81868B",
            "flex": 1,
            "fontFamily": "Inter-Regular",
            "fontSize": 14,
            "lineHeight": 18,
          }
        }
        testID="undefined/Details"
      />
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
        testID="undefined/CallToActions"
      >
        <View
          accessible={true}
          focusable={true}
          nativeBackgroundAndroid={
            Object {
              "attribute": "selectableItemBackgroundBorderless",
              "type": "ThemeAttrAndroid",
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          testID="undefined/CallToActions/viewAll/Button"
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#1AB775",
                  "fontFamily": "Inter-SemiBold",
                  "fontSize": 16,
                  "lineHeight": 22,
                },
                Object {
                  "fontSize": 14,
                  "lineHeight": 16,
                  "marginRight": 24,
                },
              ]
            }
          >
            viewAll
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
